--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 ---
 layout: home
 author_profile: true
+header:
+    overlay_image: assets/images/dna-4478127_1920.jpg
+    caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+classes: wide
 ---
