--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 author_profile: true
 header:
-    overlay_image: assets/images/dna-4478127_1920.jpg
-    caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+    overlay_image: assets/images/dna-3539309_1920.jpg
+    caption: "Photo credit: [**pixabay**](https://pixabay.com/)"
 classes: wide
 ---
